Details gap fix

--- a/src/components/CamperFeatures/CamperFeaturesDetails/CamperFeaturesDetails.module.scss
+++ b/src/components/CamperFeatures/CamperFeaturesDetails/CamperFeaturesDetails.module.scss
@@ -6,7 +6,7 @@
 .detailList {
 	display: flex;
 	flex-direction: column;
-	gap: 0.5rem;
+	gap: 1rem;
 }
 
 .detailRow {
